feat: discussions feature (#87)
* feat: add discussion feature

* feat(discussion): validate size and offset with validator

* feat(discussion): use expector in mock

* feat(discussion): handle default value in get all api filter

* fix(discussion): mux subrouter issue https://github.com/gorilla/mux/issues/31

* fix(discussion): remove subrouter in api

* fix(discussion): empty body in patch api

* fix(discussion): typo in swagger
